[tool.poetry]
name = "mlops-playground"
version = "0.1.2"
description = "Reformats files to stdout"
authors = ["Derfulio <36664091+Derfulio@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mlops_playground"}]
exclude = ["mlops_playground/examples", "mlops_playground/tests"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
flake8 = "^6.1.0"
mccabe = "^0.7.0"
pandas = "^1.5.3"
pycodestyle = "^2.11.1"
pyflakes = "^3.1.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
six = "^1.16.0"

[tool.poetry.scripts]
jformat = 'mlops_playground.jformat_click:main'

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
